OD-55 corrections to pass tests v1

--- a/templates/proposition_dissertations_list.html
+++ b/templates/proposition_dissertations_list.html
@@ -88,7 +88,7 @@
                   <td>
                       {% for prop_offer in proposition_dissertation.propositionoffer_set.all %}
                         <span class="label label-default" >
-                          {{ prop_offer.offer_proposition }}
+                          {{ prop_offer.last_acronym }}
                         </span>
                         &nbsp;
                       {% endfor %}
