OD-55 Correction translate

--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -58,7 +58,7 @@
           </div>
           <div id="to_hide">
               <div class="col-md-3" >
-                  <label for="academic_year">{% trans 'academic_year' %}</label>
+                  <label for="academic_year">{% trans 'Academic year' %}</label>
                       <select name="academic_year" id="academic_year" class="form-control">
                         <option value=""></option>
                       {% for academic_year in academic_year_10y %}
