--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -191,7 +191,7 @@
                 <td>
                     <div style="text-align: right;">
                     {% if dissertation.status == 'DRAFT' or dissertation.status == 'DIR_KO' %}
-                        <a href="{% url 'manager_dissertations_to_dir_submit' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='submit' %}"
                            id="lnk_manager_dissertations_to_dir_submit" class="btn btn-default pull-right"
                            role="button" title="{% trans 'Submit to promotor'%}"
                            onclick="return confirm('{% trans 'You are ready to submit this dissertation to the promotor. Are you sure you want to continue ?' %}')"><span
@@ -199,13 +199,13 @@
                                 aria-hidden="true"></span> {% trans 'Submit to promotor'%}</a>
                     {% endif %}
                     {% if dissertation.status == 'DIR_SUBMIT' %}
-                        <a href="{% url 'manager_dissertations_to_dir_ok' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ok' %}"
                            id="lnk_manager_promotor_accept" class="btn btn-default"
                            role="button" title="{% trans 'Promotor accepts'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as accepted by the promotor. Are you sure you want to continue ?' %}')"><span
                                 class="glyphicon glyphicon-ok-circle"
                                 aria-hidden="true"></span> {% trans 'Promotor accepts'%}</a>
-                        <a href="{% url 'manager_dissertations_to_dir_ko' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ko' %}"
                            id="lnk_manager_promotor_refuse" class="btn btn-default"
                            role="button" title="{% trans 'Promotor refuses'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as refused by the promotor. Are you sure you want to continue ?' %}')"><span
@@ -213,13 +213,13 @@
                                 aria-hidden="true"></span> {% trans 'Promotor refuses'%}</a>
                     {% endif %}
                     {% if dissertation.status == 'COM_SUBMIT' %}
-                        <a href="{% url 'manager_dissertations_to_dir_ok' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ok' %}"
                            id="lnk_manager_commission_accept" class="btn btn-default"
                            role="button" title="{% trans 'Commission accepts'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as accepted by the commission. Are you sure you want to continue ?' %}')"><span
                                 class="glyphicon glyphicon-ok-circle"
                                 aria-hidden="true"></span> {% trans 'Commission accepts'%}</a>
-                        <a href="{% url 'manager_dissertations_to_dir_ko' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ko' %}"
                            id="lnk_manager_commission_refuse" class="btn btn-default"
                            role="button" title="{% trans 'Commission refuses'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as refused by the commission. Are you sure you want to continue ?' %}')"><span
@@ -227,7 +227,7 @@
                                 aria-hidden="true"></span> {% trans 'Commission refuses'%}</a>
                     {% endif %}
                     {% if dissertation.status == 'COM_KO' %}
-                        <a href="{% url 'manager_dissertations_to_dir_ok' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ok'%}"
                            id="lnk_manager_commission_reaccept" class="btn btn-default"
                            role="button" title="{% trans 'Commission accepts'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as accepted by the commission. Are you sure you want to continue ?' %}')"><span
@@ -235,13 +235,13 @@
                                 aria-hidden="true"></span> {% trans 'Commission accepts'%}</a>
                     {% endif %}
                     {% if dissertation.status == 'EVA_SUBMIT' %}
-                        <a href="{% url 'manager_dissertations_to_dir_ok' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ok' %}"
                            id="lnk_manager_evaluation_accept" class="btn btn-default"
                            role="button" title="{% trans 'First year evaluation success'%}"
                            onclick="return confirm('{% trans 'You are ready to set the first year evaluation succeeded for this dissertation. Are you sure you want to continue ?' %}')"><span
                                 class="glyphicon glyphicon-ok-circle"
                                 aria-hidden="true"></span> {% trans 'First year evaluation success'%}</a>
-                        <a href="{% url 'manager_dissertations_to_dir_ko' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ko' %}"
                            id="lnk_manager_evaluation_refuse" class="btn btn-default"
                            role="button" title="{% trans 'First year evaluation failed'%}"
                            onclick="return confirm('{% trans 'You are ready to set the first year evaluation failed for this dissertation. Are you sure you want to continue ?' %}')"><span
@@ -249,7 +249,7 @@
                                 aria-hidden="true"></span> {% trans 'First year evaluation failed'%}</a>
                     {% endif %}
                     {% if dissertation.status == 'EVA_KO' %}
-                        <a href="{% url 'manager_dissertations_to_dir_ok' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ok' %}"
                            id="lnk_manager_evaluation_reaccept" class="btn btn-default"
                            role="button" title="{% trans 'First year evaluation success'%}"
                            onclick="return confirm('{% trans 'You are ready to set the first year evaluation succeeded for this dissertation. Are you sure you want to continue ?' %}')"><span
@@ -257,7 +257,7 @@
                                 aria-hidden="true"></span> {% trans 'First year evaluation success'%}</a>
                     {% endif %}
                     {% if dissertation.status == 'TO_RECEIVE' %}
-                        <a href="{% url 'manager_dissertations_to_dir_submit' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='submit' %}"
                            id="lnk_manager_dissertations_receive" class="btn btn-default"
                            role="button" title="{% trans 'Submit to promotor'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as received. Are you sure you want to continue ?' %}')"><span
@@ -265,7 +265,7 @@
                                 aria-hidden="true"></span> {% trans 'Dissertation received'%}</a>
                     {% endif %}
                     {% if dissertation.status == 'TO_DEFEND' %}
-                        <a href="{% url 'manager_dissertations_to_dir_submit' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='submit' %}"
                            id="lnk_manager_dissertations_defended" class="btn btn-default"
                            role="button" title="{% trans 'Submit to promotor'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as defended. Are you sure you want to continue ?' %}')"><span
@@ -273,13 +273,13 @@
                                 aria-hidden="true"></span> {% trans 'Dissertation defended'%}</a>
                     {% endif %}
                     {% if dissertation.status == 'DEFENDED' %}
-                        <a href="{% url 'manager_dissertations_to_dir_ok' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ok' %}"
                            id="lnk_manager_dissertations_success" class="btn btn-default"
                            role="button" title="{% trans 'Promotor accepts'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as succeeded. Are you sure you want to continue ?' %}')"><span
                                 class="glyphicon glyphicon-ok-circle"
                                 aria-hidden="true"></span> {% trans 'Dissertation succeeded'%}</a>
-                        <a href="{% url 'manager_dissertations_to_dir_ko' pk=dissertation.pk %}"
+                        <a href="{% url 'manager_dissertations_go_forward_from_list' pk=dissertation.pk choice='ko' %}"
                            id="lnk_manager_dissertations_reported" class="btn btn-default"
                            role="button" title="{% trans 'Promotor refuses'%}"
                            onclick="return confirm('{% trans 'You are ready to set this dissertation as failed. Are you sure you want to continue ?' %}')"><span
@@ -308,6 +308,7 @@
                 "ordering" : true,
                 "info"  : false,
                 "searching" : false,
+                "stateSave": true,
                 "language":
                 {
 
