--- a/templates/dissertation/adviser_list.html
+++ b/templates/dissertation/adviser_list.html
@@ -2,14 +2,17 @@
 <table class="table table-striped table-hover">
    <tr>
        <th>{% trans 'Manager'%}</th>
-       <th><a class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span></a> </th>
+       <th><a class="btn btn-primary pull-right trigger_modal" data-url="{% url 'faculty_adviser_add' %}?offer_proposition={{offer_propositions|join:','}}">
+           <span class="glyphicon glyphicon-plus"></span>
+           </a>
+       </th>
    </tr>
    <tbody>
     {% for obj in object_list %}
     <tr>
-        <td>{{ obj.adviser }}</td>
+        <td>{{ obj }}</td>
         <td>
-        <a class="btn btn-default pull-right trigger_modal" data-url="{% url 'faculty_adviser_delete' obj.pk %}">
+        <a class="btn btn-default pull-right trigger_modal" data-url="{% url 'faculty_adviser_delete' obj.pk %}?offer_proposition={{offer_propositions|join:','}}">
             <span class="glyphicon glyphicon-minus" ></span>
         </a>
         </td>
@@ -26,7 +29,8 @@
 
         $('#form-modal-ajax-content').load(url, function () {
             bindTextArea();
-            formAjaxSubmit('#form-modal-body form', '#form-ajax-modal');
+            let form = $(this).find('form');
+            formAjaxSubmit(form, '#form-ajax-modal');
+        });
     });
-});
 </script>
