--- a/templates/dissertation/facultyadviser_add_inner.html
+++ b/templates/dissertation/facultyadviser_add_inner.html
@@ -5,7 +5,7 @@
         {% csrf_token %}
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="bt_close_add_manager_modal"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">{% trans 'Confirm' %}</h4>
+            <h4 class="modal-title">{% trans 'Confirm manager add' %}</h4>
         </div>
         <div class="modal-body">
             <input type="hidden" name="offer_propositions" value="{{offer_propositions}}">
