--- a/templates/dissertation/offerproposition_filter.html
+++ b/templates/dissertation/offerproposition_filter.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <form method="get">
                     <div class="col-md-3">
-                        {% bootstrap_field filter.form.education_group__educationgroupyear %}
+                        {% bootstrap_field filter.form.education_group__educationgroupyear__acronym %}
                     </div>
                     <div class="col-md-4">
                         {% bootstrap_field filter.form.education_group__facultyadviser__adviser %}
@@ -21,7 +21,7 @@
                     <div class="col-md-1">
                         <br>
                         <button type="submit" id="bt_submit_pgm_manager_search" class="btn btn-primary" role="button">
-                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            <span class="fa fa-search" aria-hidden="true"></span>
                         </button>
                     </div>
                 </form>
@@ -30,15 +30,13 @@
                 <div class="col-md-5">
                     <table class="table table-striped table-hover" id="tb_pgms">
                         <tr>
-                            <th><input type="checkbox" title="{% trans 'Select/deselect all' %}"></th>
-                            <th> Education Group</th>
+                            <th> {% trans 'Education Group'%}</th>
                         </tr>
                         <form action="{% url 'adviser_list' %}" id='form_offer_prop' method="get">
                             {% for obj in object_list %}
                                 <tr>
                                     <td><input type="checkbox" name="offer_proposition" value="{{ obj.pk }}"
-                                               onclick="load_faculty_advisers()"></td>
-                                    <td> {{ obj.last_acronym }} </td>
+                                               onclick="load_faculty_advisers()"> {{ obj.last_acronym }}</td>
                                 </tr>
                             {% endfor %}
                         </form>
