OD-53 ajout des tests

--- a/templates/dissertation/adviser_list.html
+++ b/templates/dissertation/adviser_list.html
@@ -21,16 +21,8 @@
    </tbody>
 </table>
 <script>
-    $(".trigger_modal").click(function () {
-        let url = $(this).data("url");
-        let modal_class = $(this).data("modal_class");
-        $('#modal_dialog_id').attr("class", "modal-dialog").addClass(modal_class);
-        $('#form-ajax-modal').modal('toggle');
-
-        $('#form-modal-ajax-content').load(url, function () {
-            bindTextArea();
-            let form = $(this).find('form');
-            formAjaxSubmit(form, '#form-ajax-modal');
-        });
+    $(document).ready(function(){
+        bind_trigger_modal();
     });
+
 </script>
