--- a/templates/proposition_dissertation_detail.html
+++ b/templates/proposition_dissertation_detail.html
@@ -72,16 +72,33 @@
                     {{ proposition_dissertation.title }}
                 </div>
             </div>
-            {% if filename != "" %}
-                <div class="row">
-                    <div class="col-md-4" style="text-align:right">
-                         <label>{% trans 'file' %}</label>
-                     </div>
-                     <div class="col-md-4">
-                         <a href="{% url 'proposition_download' proposition_pk=proposition_dissertation.pk %}">{% trans 'Link' %}</a>
-                     </div>
+            <div class="row">
+                <div class="col-md-4" style="text-align:right">
+                     <label>{% trans 'file' %}</label>
                  </div>
-            {% endif %}
+                {% if filename != "" %}
+                     <div class="col-md-5">
+                         <a href="{% url 'proposition_download' proposition_pk=proposition_dissertation.pk %}" title="{% trans 'Download' %}">
+                             <i class="far fa-file"> {{ filename }}</i>
+                         </a>
+                         <a data-url="{% url 'proposition_file_delete' proposition_pk=proposition_dissertation.pk %}"
+                            class="btn btn-warning btn-xs trigger_modal" role="button">
+                             <span class="fas fa-times">
+                             </span>
+                         </a>
+                     </div>
+                {% else %}
+                    <div class="col-md-5">
+                        <a class="btn btn-default btn-primary btn-xs" data-toggle="modal" data-target="#pnl_upload_documents"
+                           id="btn_add_file" title="{% trans 'Add file'%}">
+                            <i class="fas fa-plus"></i>
+                                {% trans 'Add file'%}
+                            <span class="fas fa-file-upload" aria-hidden="true" id="spn_add_file">
+                            </span>
+                        </a>
+                     </div>
+                {% endif %}
+             </div>
             <div class="row">
                 <div class="col-md-4" style="text-align: right">
                     <label>{% trans 'Visibility' %}</label>
