OD-77 petite correction tempate

--- a/templates/proposition_dissertation_detail.html
+++ b/templates/proposition_dissertation_detail.html
@@ -80,7 +80,7 @@
                          </a>
                          {% if check_authorisation_of_proposition %}
                              <a data-url="{% url 'proposition_file_delete' proposition_pk=proposition_dissertation.pk %}"
-                                class="btn btn-warning btn-xs trigger_modal" titre="{% trans 'Delete' %}" role="button">
+                                class="btn btn-warning btn-xs trigger_modal" title="{% trans 'Delete' %}" role="button">
                                  <span class="fas fa-times">
                                  </span>
                              </a>
