--- a/templates/dissertations.html
+++ b/templates/dissertations.html
@@ -88,7 +88,7 @@
     <div class="panel panel-default">
     <div class="panel-body">
         <div class="row">
-          <div class="col-md-1"><i class="fa fa-lightbulb-o" style="font-size: 400%; color: #6699FF;"></i></div>
+          <div class="col-md-1"><i class="far fa-lightbulb" style="font-size: 400%; color: #6699FF;"></i></div>
           <div class="col-md-5">
             <h4 class="media-heading">
                 <a href="{% url 'manager_proposition_dissertations' %}" id="lnk_manager_proposition_dissertations" >
@@ -109,7 +109,7 @@
         </div>
         <br>
         <div class="row">
-          <div class="col-md-1"><i class="fa fa-pencil-square-o" style="font-size: 400%; color: #6699FF;"></i></div>
+          <div class="col-md-1"><i class="far fa-edit" style="font-size: 400%; color: #6699FF;"></i></div>
           <div class="col-md-5">
             <h4 class="media-heading">
                 <a href="{% url 'manager_dissertations_list' %}" id="lnk_manager_dissertations" >
