--- a/templates/dissertations.html
+++ b/templates/dissertations.html
@@ -53,7 +53,7 @@
   <div class="panel panel-default">
     <div class="panel-body">
         <div class="row">
-          <div class="col-md-1"><i class="fa fa-lightbulb-o" style="font-size: 400%; color: #6699FF;"></i></div>
+          <div class="col-md-1"><i class="far fa-lightbulb" style="font-size: 400%; color: #6699FF;"></i></div>
           <div class="col-md-5">
             <h4 class="media-heading">
                 <a href="{% url 'my_dissertation_propositions' %}" id="lnk_my_dissertation_propositions" >
@@ -74,7 +74,7 @@
         </div>
         <br>
         <div class="row">
-          <div class="col-md-1"><i class="fa fa-pencil-square-o" style="font-size: 400%; color: #6699FF;"></i></div>
+          <div class="col-md-1"><i class="far fa-edit" style="font-size: 400%; color: #6699FF;"></i></div>
           <div class="col-md-5">
             <h4 class="media-heading">
                 <a href="{% url 'dissertations_list' %}" id="lnk_dissertations" >
