--- a/templates/dissertation/facultyadviser_add_inner.html
+++ b/templates/dissertation/facultyadviser_add_inner.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 {% load bootstrap3 i18n %}
     <div class="modal-body" id="form-modal-body">
         <form method="post" action='{{ request.get_full_path }}' class="post-form" id="form-modal">
