--- a/templates/manager_proposition_dissertation_new.html
+++ b/templates/manager_proposition_dissertation_new.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% load staticfiles %}
+{% load staticfiles bootstrap3 %}
 {% load i18n %}
 
 {% comment "License" %}
@@ -40,73 +40,33 @@
     <div class="panel-body">
        <form method="POST" class="post-form">
         {% csrf_token %}
+        {{ form.media }}
         <div class="panel-group">
-            <label for="txt_type" {% if form.author.errors %} style="color:red;" {% endif %}>
-                {% trans 'Author' %}
-                {% for error in form.author.errors %}
-                    <br>{{ error|escape }}
-                {% endfor %}
-            </label>
-            <select class="form-control" id="txt_author"  name="author" style="margin:-6px;">
-                <option value={{ form.author }}
-            </select>
-            <br>
+            {% bootstrap_field form.author %}
             {% trans 'If the concerned teacher is not in the list, you can' %}
             <a href="{% url 'manager_informations_add' %}" id="lnk_manager_informations_add" class=""
                 role="button" title="{% trans 'Add teacher'%}">{% trans 'Add teacher' %}</a>
         </div>
         <div class="panel-group">
-            <label for="txt_title" {% if form.title.errors %} style="color:red;" {% endif %}>
-                {% trans 'Title' %}
-                {% for error in form.title.errors %}
-                    <br>{{ error|escape }}
-                {% endfor %}
-            </label>
-            <input class="form-control" id="txt_title"  name="title"
-                style="margin:-6px;" value="{{ form.title.value|default_if_none:'' }}">
+            {% bootstrap_field form.title %}
         </div>
         <div class="panel-group">
-            <label for="txt_visibility">{% trans 'Visibility' %}</label>
-            <input id="txt_visibility"  name="visibility"
-                   style="margin-left:6px;" type="checkbox" {% if form.visibility.value %} checked {% endif %}>
+            {% bootstrap_field form.visibility %}
         </div>
         <div class="panel-group">
-            <label for="txt_description">{% trans 'Description' %}</label>
-            <textarea class="form-control" id="txt_description"  name="description" rows="10" style="margin:-6px;"></textarea>
+            {% bootstrap_field form.description %}
         </div>
         <div class="panel-group">
-            <label for="txt_type">{% trans 'Subject type' %}</label>
-            <select class="form-control" id="txt_type"  name="type" style="margin:-6px;">
-                {% for type in types_choices %}
-                    <option value="{{ type.0 }}" {% if form.type.value == type.0 %}selected{% endif %}>{{ type.1}}</option>
-                {% endfor %}
-            </select>
+            {% bootstrap_field form.type %}
         </div>
         <div class="form-group">
-            <label for="txt_level">{% trans 'Subject developement level' %}</label>
-            <select class="form-control" id="txt_level"  name="level" style="margin:-6px;">
-                {% for level in levels_choices %}
-                    <option value="{{ level.0 }}" {% if form.level.value == level.0 %}selected{% endif %}>{{ level.1}}</option>
-                {% endfor %}
-            </select>
+            {% bootstrap_field form.level %}
         </div>
         <div class="panel-group">
-            <label for="txt_collaboration">{% trans 'Collaboration' %}</label>
-            <select class="form-control" id="txt_collaboration"  name="collaboration" style="margin:-6px;">
-                {% for collaboration in collaborations_choices %}
-                    <option value="{{ collaboration.0 }}" {% if form.collaboration.value == collaboration.0 %}selected{% endif %}>{{ collaboration.1}}</option>
-                {% endfor %}
-            </select>
+            {% bootstrap_field form.collaboration %}
         </div>
         <div class="panel-group">
-            <label for="txt_max_number_student" {% if form.max_number_student.errors %} style="color:red;" {% endif %}>
-                {% trans 'Indicative number of places for this subject' %}
-                {% for error in form.max_number_student.errors %}
-                    <br>{{ error|escape }}
-                {% endfor %}
-            </label>
-            <input class="form-control" id="txt_max_number_student"  name="max_number_student"
-                style="margin:-6px;" value="{{ form.max_number_student.value|default_if_none:'' }}">
+            {% bootstrap_field form.max_number_student %}
         </div>
         <div class="panel-group">
             <label for="txt_level" {% if offer_propositions_error %} style="color:red;" {% endif %}>
