OD-113 Faire disparaitre le spinner lorsque l'on génère un export excel

--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -110,7 +110,7 @@
             <button type="submit" id="bt_submit_manager_information_search" class="btn btn-primary" role="button"
             title="{% trans 'Search' %}"><span class="glyphicon glyphicon-search"
             aria-hidden="true"></span></button>
-            <button type="submit" id="bt_submit_manager_information_xlsx" class="btn btn-default" role="button"
+            <button type="submit" id="bt_submit_manager_information_xlsx" class="btn btn-default no_spinner" role="button"
             title="{% trans 'Export search as XLS' %}" name="bt_xlsx" value="bt_xlsx"><span class="glyphicon glyphicon-download-alt"
             aria-hidden="true" ></span></button>
 
