--- a/templates/manager_proposition_dissertations_list.html
+++ b/templates/manager_proposition_dissertations_list.html
@@ -50,7 +50,7 @@
             <button type="submit" id="bt_submit_proposition_dissertation_search" class="btn btn-primary" role="button"
             title="{% trans 'Search dissertation subject' %}"><span class="glyphicon glyphicon-search"
             aria-hidden="true"></span></button>
-            <button type="submit" id="bt_submit_manager_proposition_dissertation_xlsx" class="btn btn-default" role="button"
+            <button type="submit" id="bt_submit_manager_proposition_dissertation_xlsx" class="btn btn-default no_spinner" role="button"
             title="{% trans 'Export search as XLS' %}" name="bt_xlsx" value="bt_xlsx"><span class="glyphicon glyphicon-download-alt"
             aria-hidden="true" ></span></button>
 
