OD-117 Uniformisation des modèles Dissertation et Adviser

--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -100,7 +100,7 @@
                     <option value="TO_RECEIVE"{% if status_search  ==  "TO_RECEIVE" %} selected {% endif %}>{% trans 'To be received'%}</option>
                     <option value="TO_DEFEND"{% if status_search  ==  "TO_DEFEND" %} selected {% endif %}>{% trans 'To be defended'%}</option>
                     <option value="DEFENDED"{% if status_search  ==  "DEFENDED" %} selected {% endif %}>{% trans 'Defended'%}</option>
-                    <option value="ENDED"{% if status_search  ==  "ENDED" %} selected {% endif %}>{% trans 'Ended'%}</option>
+                    <option value="ENDED"{% if status_search  ==  "ENDED" %} selected {% endif %}>{% trans 'Finished'%}</option>
                     <option value="ENDED_WIN"{% if status_search  ==  "ENDED_WIN" %} selected {% endif %}>{% trans 'Ended with success'%}</option>
                     <option value="ENDED_LOS"{% if status_search  ==  "ENDED_LOS" %} selected {% endif %}>{% trans 'Reported'%}</option>
                   </select>
