OD-117 Modification des enums et correspondance Adviser et Dissertations

--- a/templates/dissertations_wait_list.html
+++ b/templates/dissertations_wait_list.html
@@ -94,8 +94,8 @@
                             <span class="label label-default">{{ dissert.get_status_display }}</span>
                             {% endif %}
                         </td>
-                        <td>{{ dissert.education_group_year_start.acronym }}</td>
-                        <td>{{ dissert.education_group_year_start.academic_year }}</td>
+                        <td>{{ dissert.education_group_year.acronym }}</td>
+                        <td>{{ dissert.education_group_year.academic_year }}</td>
                       </tr>
                     {% endfor %}
                   </table>
