--- a/templates/manager_informations_detail_list.html
+++ b/templates/manager_informations_detail_list.html
@@ -96,7 +96,7 @@
                         {{ adviser_list_dissertation.dissertation.get_status_display }}
                     </span>
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -154,7 +154,7 @@
                         {{ adviser_list_dissertation.dissertation.get_status_display }}
                     </span>
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -212,7 +212,7 @@
                         {{ adviser_list_dissertation.dissertation.get_status_display }}
                     </span>
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -270,7 +270,7 @@
                         {{ adviser_list_dissertation.dissertation.get_status_display }}
                     </span>
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -328,7 +328,7 @@
                         {{ adviser_list_dissertation.dissertation.get_status_display }}
                     </span>
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -386,7 +386,7 @@
                         {{ adviser_list_dissertation.dissertation.get_status_display }}
                     </span>
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
