--- a/templates/manager_informations_detail_list_wait.html
+++ b/templates/manager_informations_detail_list_wait.html
@@ -104,7 +104,7 @@
                         {{ dissert_role.dissertation.get_status_display }}
                     </span>
                     </td>
-                    <td>{{ dissert_role.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ dissert_role.dissertation.education_group_year.academic_year }}</td>
                     <td>{{ dissert_role.dissertation.proposition_dissertation }}</td>
                 </tr>
                 {% endfor %}
