--- a/templates/dissertations_list.html
+++ b/templates/dissertations_list.html
@@ -77,8 +77,8 @@
                         <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
                         {% endif %}
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.academic_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -120,8 +120,8 @@
                         <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
                         {% endif %}
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.academic_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -163,8 +163,8 @@
                         <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
                         {% endif %}
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.academic_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -206,8 +206,8 @@
                         <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
                         {% endif %}
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.academic_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -249,8 +249,8 @@
                         <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
                         {% endif %}
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.academic_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -292,8 +292,8 @@
                         <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
                         {% endif %}
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.academic_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -335,8 +335,8 @@
                         <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
                         {% endif %}
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.academic_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -378,8 +378,8 @@
                         <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
                         {% endif %}
                     </td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year.academic_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
