--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -185,8 +185,8 @@
                         {{ dissertation.get_status_display }}
                     </span>
                 </td>
-                <td>{{ dissertation.education_group_year_start.acronym }}</td>
-                <td>{{ dissertation.education_group_year_start.academic_year }}</td>
+                <td>{{ dissertation.education_group_year.acronym }}</td>
+                <td>{{ dissertation.education_group_year.academic_year }}</td>
                 <td>{{ dissertation.proposition_dissertation }}</td>
                 <td>
                     <div style="text-align: right;">
