OD-117 Fixed suite au rename du champs education_group_year_start en education_group_year

--- a/templates/manager_dissertations_detail.html
+++ b/templates/manager_dissertations_detail.html
@@ -165,7 +165,7 @@
                       <label>{% trans 'Start Program/Year' %}</label>
                   </div>
                   <div class="col-md-9">
-                      {{ dissertation.education_group_year_start }}
+                      {{ dissertation.education_group_year }}
                   </div>
                 </div>
             </div>
