--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -91,8 +91,8 @@
                   <select name="status_search" id="status_search" class="form-control">
                     <option value=""></option>
                     <option value="DRAFT"{% if status_search  ==  "DARFT" %} selected {% endif %}>{% trans 'Draft'%}</option>
-                    <option value="DIR_SUBMIT"{% if status_search  ==  "DIR_SUBMIT" %} selected {% endif %}>{% trans 'Submitted to promotor'%}</option>
-                    <option value="DIR_KO"{% if status_search  ==  "DIR_KO" %} selected {% endif %}>{% trans 'Refused by promotor'%}</option>
+                    <option value="DIR_SUBMIT"{% if status_search  ==  "DIR_SUBMIT" %} selected {% endif %}>{% trans 'Submitted to promoter'%}</option>
+                    <option value="DIR_KO"{% if status_search  ==  "DIR_KO" %} selected {% endif %}>{% trans 'Refused by promoter'%}</option>
                     <option value="COM_SUBMIT"{% if status_search  ==  "COM_SUBMIT" %} selected {% endif %}>{% trans 'Submitted to commission'%}</option>
                     <option value="COM_KO"{% if status_search  ==  "COM_KO" %} selected {% endif %}>{% trans 'Refused by commission'%}</option>
                     <option value="EVA_SUBMIT"{% if status_search  ==  "EVA_SUBMIT" %} selected {% endif %}>{% trans 'Submitted to 1st year evaluation'%}</option>
@@ -185,8 +185,8 @@
                         {{ dissertation.get_status_display }}
                     </span>
                 </td>
-                <td>{{ dissertation.education_group_year_start.acronym }}</td>
-                <td>{{ dissertation.education_group_year_start.academic_year }}</td>
+                <td>{{ dissertation.education_group_year.acronym }}</td>
+                <td>{{ dissertation.education_group_year.academic_year }}</td>
                 <td>{{ dissertation.proposition_dissertation }}</td>
                 <td>
                     <div style="text-align: right;">
