--- a/templates/dissertation/offerproposition_filter.html
+++ b/templates/dissertation/offerproposition_filter.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}	
-{% load staticfiles %}	
+{% load static %}	
 {% load bootstrap3 i18n %}	
 {% load check %}	
 {% block content %}	
